--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,8 @@
         <pre id="statusOutput">Booting...</pre>
       </section>
     </main>
-
+    <script src="./env.js"></script>
+<script type="module" src="./supabase.js"></script>
     <script type="module" src="./game.js"></script>
   </body>
 </html>
