--- a/public/index.html
+++ b/public/index.html
@@ -118,5 +118,8 @@
     </dialog>
 
     <script type="module" src="./game.js"></script>
+    <!--dont remove these scripts, Cloudflare build command populates them dynammically to run the game instance-->
+    <script src="./env.js"></script>
+    <script type="module" src="./supabase.js"></script>
   </body>
 </html>
